RESOLVED FIXED193325
REGRESSION(r239815) http/tests/workers/service/serviceworker-private-browsing.https.html test times out
https://bugs.webkit.org/show_bug.cgi?id=193325
Summary REGRESSION(r239815) http/tests/workers/service/serviceworker-private-browsing...
Alex Christensen
Reported 2019-01-10 10:30:49 PST
REGRESSION(r239815) http/tests/workers/service/serviceworker-private-browsing.https.html test times out
Attachments
Patch (5.59 KB, patch)
2019-01-10 10:32 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-01-10 10:32:38 PST
Joseph Pecoraro
Comment 2 2019-01-10 10:45:29 PST
Comment on attachment 358805 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-01-10 11:11:41 PST
Comment on attachment 358805 [details] Patch Clearing flags on attachment: 358805 Committed r239835: <https://trac.webkit.org/changeset/239835>
WebKit Commit Bot
Comment 4 2019-01-10 11:11:42 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-01-10 11:12:29 PST
Note You need to log in before you can comment on or make changes to this bug.