REGRESSION(r239815) http/tests/workers/service/serviceworker-private-browsing.https.html test times out https://bugs.webkit.org/show_bug.cgi?id=193325

Patch by Alex Christensen <achristensen@webkit.org> on 2019-01-10
Reviewed by Joseph Pecoraro.

InjectedBundle::setPrivateBrowsingEnabled effectively didn't do anything when enabled was false.
I made it destroy the legacy private browsing session in the NetworkProcess, which caused a test to time out.
This functionality is only used for testing, so it's no big deal to revert that part of the patch.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::destroyLegacyPrivateBrowsingSession): Deleted.
* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::setPrivateBrowsingEnabled):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::destroyLegacyPrivateBrowsingSessionInNetworkProcess): Deleted.
* WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/207821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239835 268f45cc-cd09-0410-ab3c-d52691b4dbfc